Move files to src

--- a/src/configuracion.tex
+++ b/src/configuracion.tex
@@ -12,7 +12,7 @@
 \usepackage{fancyhdr} % Soporte para encabezados y pie de pagina
 
 % ---------- Configuraciones ----------
-\graphicspath{ {./img/} } % Carpeta de imágenes
+\graphicspath{ {img/} } % Carpeta de imágenes
 \onehalfspacing % Entrelineado 1.5
 
 % Estilo de la pagina
