--- a/src/main.tex
+++ b/src/main.tex
@@ -3,20 +3,20 @@
 \documentclass{article}
 
 % Importa archivo con datos de la tarea
-\input{datos.tex}
+\input{src/datos.tex}
 
 % Importa configuraciones
-\input{configuracion.tex}
+\input{src/configuracion.tex}
 
 % ---------- Inicio del documento ----------
 \begin{document}
 
 % Importa portada
-\input{portada.tex}
+\input{src/portada.tex}
 
 \newpage
 
 % Importa cuerpo del documento
-\input{cuerpo.tex}
+\input{src/cuerpo.tex}
 
 \end{document}
