Add amsthm package

--- a/src/configuracion.tex
+++ b/src/configuracion.tex
@@ -7,6 +7,7 @@
 \usepackage{graphicx} % Soporte para imágenes
 \usepackage{amsmath} % Soporte para matemáticas
 \usepackage{amssymb} % Soporte para símbolos
+\usepackage{amsthm} % Soporte para teoremas
 \usepackage{setspace} % Soporte para entrelineado
 \usepackage{caption} % Soporte pie de imagen
 \usepackage{fancyhdr} % Soporte para encabezados y pie de pagina
