--- a/src/cuerpo.tex
+++ b/src/cuerpo.tex
@@ -1,22 +1,5 @@
 % ---------- Cuerpo del documento ----------
 
-% Titulo
-\begin{center}
-	% Nombre de la tarea
-	\huge
-	\tareaName
+\section*{Godspeed}
 
-	% Nombre del autor
-	\vspace{0.5cm}
-	\large
-	\autorName
-
-	% Fecha
-	\vspace{0.3cm}
-	\large
-	\fecha
-\end{center}
-\vspace{0.5cm}
-
-% Contenido del documento
-\section*{Hola Mundo}
+\lipsum[1]
