--- a/src/datos.tex
+++ b/src/datos.tex
@@ -1,9 +1,9 @@
 % ---------- Datos del documento ----------
 
-\newcommand{\autorName}{Avila Barba Erick Yahir} % Nombre
+\newcommand{\autor}{Avila Barba Erick Yahir} % Nombre
 \newcommand{\autorAPA}{Avila, E.} % Nombre abreviado
 \newcommand{\noCuenta}{321159063} % Numero de cuenta
-\newcommand{\fecha}{Agosto 28, 2023.} % Fecha de entrega
-\newcommand{\tareaName}{Práctica 0 - Sintaxis} % Tarea
-\newcommand{\profeName}{Erick Bernal Márquez} % Profesor
-\newcommand{\materiaName}{Introducción a Ciencias de la Computación} % Materia
+\newcommand{\fecha}{Agosto 28, 2023} % Fecha de entrega
+\newcommand{\tarea}{Práctica 0 - Sintaxis} % Tarea
+\newcommand{\profe}{Erick Bernal Márquez} % Profesor
+\newcommand{\materia}{Introducción a Ciencias de la Computación} % Materia
