--- a/src/main.tex
+++ b/src/main.tex
@@ -11,10 +11,8 @@
 % ---------- Inicio del documento ----------
 \begin{document}
 
-% Importa portada
-\input{src/portada.tex}
-
-\newpage
+% Importa cabecera
+\input{src/header.tex}
 
 % Importa cuerpo del documento
 \input{src/cuerpo.tex}
