title was added

--- a/src/configuracion.tex
+++ b/src/configuracion.tex
@@ -15,7 +15,7 @@
 
 % ---------- Configuraciones ----------
 \graphicspath{ {img/} } % Carpeta de imágenes
-\onehalfspacing % Entrelineado 1.5
+\onehalfspacing{} % Entrelineado 1.5
 
 % Estilo de la pagina
 \fancypagestyle{miEstilo}{
