--- a/src/datos.tex
+++ b/src/datos.tex
@@ -2,8 +2,6 @@
 
 \newcommand{\autor}{Avila Barba Erick Yahir} % Nombre
 \newcommand{\autorAPA}{Avila, E.} % Nombre abreviado
-\newcommand{\noCuenta}{321159063} % Numero de cuenta
-\newcommand{\fecha}{Agosto 28, 2023} % Fecha de entrega
-\newcommand{\tarea}{Práctica 0 - Sintaxis} % Tarea
-\newcommand{\profe}{Erick Bernal Márquez} % Profesor
-\newcommand{\materia}{Introducción a Ciencias de la Computación} % Materia
+\newcommand{\fecha}{Agosto 21, 2024} % Fecha de entrega
+\newcommand{\tarea}{Tarea 2} % Tarea
+\newcommand{\materia}{Modelado y Programación} % Materia
