--- a/src/header.tex
+++ b/src/header.tex
@@ -15,7 +15,7 @@
             \textbf{\materia}\\[0.1cm]
             \tarea\\[0.1cm]
             \autor\\[0.1cm]
-            \fecha
+            \fecha{}
         \end{center}
     \end{minipage}\hfill
     % Logo de la Facultad de Ciencias
@@ -26,4 +26,8 @@
     \end{minipage}
 \end{center}
 
-\noindent\rule{\textwidth}{0.01cm}
+\noindent\rule{\textwidth}{0.01cm}\\
+
+\begin{center}
+    {\huge \tarea}
+\end{center}
