--- a/src/main.tex
+++ b/src/main.tex
@@ -1,6 +1,6 @@
 % ---------- Plantilla para tareas de la Facultad de Ciencias, UNAM ----------
 
-\documentclass{article}
+\documentclass[11pt]{article}
 
 % Importa archivo con datos de la tarea
 \input{src/datos.tex}
