Elimina separacion del header y actualiza datos

--- a/src/datos.tex
+++ b/src/datos.tex
@@ -2,6 +2,6 @@
 
 \newcommand{\autor}{Avila Barba Erick Yahir} % Nombre
 \newcommand{\autorAPA}{Avila, E.} % Nombre abreviado
-\newcommand{\fecha}{Agosto 21, 2024} % Fecha de entrega
-\newcommand{\tarea}{Tarea 2} % Tarea
-\newcommand{\materia}{Modelado y Programación} % Materia
+\newcommand{\fecha}{Septiembre 4, 2025} % Fecha de entrega
+\newcommand{\tarea}{Practica 2: Circuitos Combinacionales} % Tarea
+\newcommand{\materia}{Organización y arquitectura de computadoras} % Materia
